--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
 .about-content{
     display: flex;
     flex-direction: column;
-    height: 621px;
+
 }
 .container {
     max-width: 1100px;
@@ -83,7 +83,8 @@
 
 .about-section {
     background-color: #EFF8F6;
-}
+    padding-bottom: 80px;
+}  
 .about-section__title {
     color: #D52047;
     padding: 95px 0 40px 0;
